// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template renders default 1`] = `
"<div id=\\"dont-change-please\\" class=\\"modal\\">
  <div class=\\"modal-dialog modal-md\\">
    <div class=\\"modal-content\\">
      <div class=\\"modal-header\\">
        <!-- @slot Displays the header of the modal -->
        <!--v-if--><button class=\\"btn-close\\" data-bs-dismiss=\\"modal\\" type=\\"button\\"></button>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`template renders given custom classes 1`] = `
"<div id=\\"owow-modal\\" class=\\"modal custom-class\\">
  <div class=\\"modal-dialog modal-md\\">
    <div class=\\"modal-content\\">
      <div class=\\"modal-header header-class\\">
        <!-- @slot Displays the header of the modal -->
        <!--v-if--><button class=\\"btn-close\\" data-bs-dismiss=\\"modal\\" type=\\"button\\"></button>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;
